examples/negative/silent_contract/unbound_tyvar_in_signature.kai
# Silent contract (#520 audit, category 3 / type system): a fn
# signature uses type variable `a` in the parameter and `b` in
# the return type, but `b` is never introduced (no `[a, b]`
# parameter list) and is unrelated to `a`. ML/HM convention
# rejects this — `b` is unbound. kaikai compiles cleanly.
#
# See examples/negative/silent_contract/README.md for follow-up.

fn f(x: a) : b = x

fn main() : Int = f(1)
